        _active_ populations.
  - CHG: Merge parameter output and outputExpr and use '!expr' for the expression
        case.
  - NEW: Allow parameter baseOperator::at to take a single number in addition to a list.
  - NEW: Disallow parameter alias locus to parameter loci in penetrance,
		selection and quantitative trait operators. Allow loci to accept a number.

version 0.9.0 - (Rev 2130) Dec 15, 2008 (tagged, but not publically released)
  - CHG: add population::setSubPopByIndInfo to allow flexible migration.
  - CHG: migrator now uses an information field "migrate_to".
  - CHG: Add function population::extract.
  - CHG: Remove parameter ancGen from population::clone().
  - NEW: Dump() also display information fields.
  - NEW: Expose population::pushAndDiscard(pop) as population::push().
  - NEW: Add parameter subPops to all operators.
  - CHG: Move operators pySubset(), randomSample(), caseControlSample()
		and affectedSibpairSample from simuPOP core to simuUtil.py.
		Remove src/sampler.*.
  - CHG: Remove infoTagger, sexTagger and affectionTagger and will
		replace them by pedigreeTagger.
  - CHG: Remove population::removeEmptySubPops().
  - NEW: Add support for subpopulation names.
  - CHG: Remove intializer, spread and pyInit operators.
  - CHG: Add parameter initSex to initByFreq and initByValue.
  - NEW: Initializers now support virtual subpopulations.
  - CHG: Recombiantor no longer supports recombination by sex, 
		and haplodiploid chromosomes.
  - CHG: Recombinator now supports different types of chromosomes.
  - NEW: Add ops parameter to mating schemes.
  - NEW: add mitochondrialGenoTransmitter.
  - NEW: add population::updateInfoFieldsFrom.
  - NEW: Add two examples in doc/cookbook, demonstrating the use of customized
		genotype transmitters and mitochondrialGenoTransmitter.

version 0.8.9 - (Rev 1948) Nov 18, 2008 (tagged, but not publically released)
  - DOC: Adjust reference output for simuPOP classes.