@@ -1,2 +1,2 @@
 SIMUPOP_VER = "0.9.1"
-SIMUPOP_REV = "2321"
+SIMUPOP_REV = "2320"
