@@ -39,6 +39,7 @@ version 0.9.1 - (Rev 2321) Jan 11, 2009
   - NEW: Allow parameter baseOperator::at to take a single number in addition to a list.
   - NEW: Disallow parameter alias locus to parameter loci in penetrance,
 		selection and quantitative trait operators. Allow loci to accept a number.
+  - NEW: Support other device types in varPlotter::saveAs.
 
 version 0.9.0 - (Rev 2130) Dec 15, 2008 (tagged, but not publically released)
   - CHG: add population::setSubPopByIndInfo to allow flexible migration.
